--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Deliveboo</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/js/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./src/assets/deliveroo-logo.webp" type="image/webp">
+
+  <title>Deliveboo</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/js/main.js"></script>
+</body>
+
 </html>
